# bcrab-cli

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  error.rs  lib.rs  main.rs  models.rs  repository.rs  templates.rs  ui.rs
src/generator/: file_creators.rs  file_ops.rs  handlers.rs  mod.rs  module_updaters.rs  utils.rs
