[package]
name = "bcrab-cli"
version = "0.1.2"
edition = "2021"

description = "Just A boilerplate for axum "
license = "MIT"

[[bin]]
name = "boil"
path = "src/main.rs"

[lib]
name = "bcrab_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.12"
indicatif = "0.18.4"
